--- a/SurveyEducation/Views/Account/Login.cshtml
+++ b/SurveyEducation/Views/Account/Login.cshtml
@@ -1,17 +1,4 @@
 ﻿<!DOCTYPE html>
-
-<!-- =========================================================
-* Sneat - Bootstrap 5 HTML Admin Template - Pro | v1.0.0
-==============================================================
-
-* Product Page: https://themeselection.com/products/sneat-bootstrap-html-admin-template/
-* Created by: ThemeSelection
-* License: You must have a valid license purchased in order to legally use the theme for your project.
-* Copyright ThemeSelection (https://themeselection.com)
-
-=========================================================
- -->
-<!-- beautify ignore:start -->
 <html lang="en"
       class="light-style customizer-hide"
       dir="ltr"
@@ -156,7 +143,7 @@
 
                         <p class="text-center">
                             <span>New on our platform?</span>
-                            <a href="auth-register-basic.html">
+                            <a href="Register">
                                 <span>Create an account</span>
                             </a>
                         </p>
@@ -166,17 +153,6 @@
             </div>
         </div>
     </div>
-
-    <!-- / Content -->
-
-    <div class="buy-now">
-        <a href="https://themeselection.com/products/sneat-bootstrap-html-admin-template/"
-           target="_blank"
-           class="btn btn-danger btn-buy-now">Upgrade to Pro</a>
-    </div>
-
-    <!-- Core JS -->
-    <!-- build:js assets/vendor/js/core.js -->
     <script src="~/Areas/Admin/Public/assets/vendor/libs/jquery/jquery.js"></script>
     <script src="~/Areas/Admin/Public/assets/vendor/libs/popper/popper.js"></script>
     <script src="~/Areas/Admin/Public/assets/vendor/js/bootstrap.js"></script>
