--- a/SurveyEducation/Views/Account/Register.cshtml
+++ b/SurveyEducation/Views/Account/Register.cshtml
@@ -107,11 +107,6 @@
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             @Html.AntiForgeryToken()
                             <div class="form-group">
-                                @Html.LabelFor(m => m.Fullname, new { @class = "form-label" })
-                                @Html.TextBoxFor(m => m.Fullname, new { @class = "form-control" })
-                                @Html.ValidationMessageFor(m => m.Fullname, "", new { @class = "text-danger" })
-                            </div>
-                            <div class="form-group">
                                 @Html.LabelFor(m => m.UserName, new { @class = "form-label" })
                                 @Html.TextBoxFor(m => m.UserName, new { @class = "form-control" })
                                 @Html.ValidationMessageFor(m => m.UserName, "", new { @class = "text-danger" })
@@ -127,21 +122,19 @@
                                 @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group">
-                                <label class="ckbox">
-                                    <input type="checkbox"><span>Xác Nhận Thông Tin</span>
-                                </label>
+                                @Html.LabelFor(m => m.EmployeeNumber, new { @class = "form-label" })
+                                @Html.TextBoxFor(m => m.EmployeeNumber, new { @class = "form-control" })
+                                @Html.ValidationMessageFor(m => m.EmployeeNumber, "", new { @class = "text-danger" })
                             </div>
                             <div class="form-group">
-                                <button type="submit" class="btn btn-primary pd-x-20">Button</button>
+                                <label class="ckbox">
+                                    <input type="checkbox"><span>&nbsp;&nbsp;&nbsp;Remember me</span>
+                                </label>
+                            </div>
+                            <div class="form-group ">
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </div>
                         }
-
-                        @*<p class="text-center">
-            <span>Already have an account?</span>
-            <a href="auth-login-basic.html">
-                <span>Sign in instead</span>
-            </a>
-        </p>*@
                     </div>
                 </div>
                 <!-- Register Card -->
