--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -38,19 +38,19 @@
                                 <div class="col-12 col-mb-8">
                                     <div class="row m-2 basic-survey">
                                         <div class="col-2"> <label class="form-label" for="basic-default-fullname">Tên</label></div>
-                                        <div class="col-6"> <input type="text" name="survey-name" class="form-control" id="basic-default-surveyname" placeholder="SurveyName" /></div>
+                                        <div class="col-6"> <input type="text" name="survey-name" class="form-control" id="survey-name" placeholder="SurveyName" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian bắt đầu</label></div>
-                                        <div class="col-4"><input type="date" name="start-time" class="form-control" id="basic-default-company" placeholder="Start Time" /></div>
+                                        <div class="col-4"><input type="date" name="start-time" class="form-control" id="start-time" placeholder="Start Time" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian kết thúc</label></div>
-                                        <div class="col-4"><input type="date" name="end-time" class="form-control" id="basic-default-company" placeholder="End Time" /></div>
+                                        <div class="col-4"><input type="date" name="end-time" class="form-control" id="end-time" placeholder="End Time" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey" ">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Mô tả</label></div>
-                                        <div class="col-10"><textarea name="description" class="form-control" id="basic-default-company" placeholder="Description"></textarea></div>
+                                        <div class="col-10"><textarea name="description" class="form-control" id="description" placeholder="Description"></textarea></div>
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end">
@@ -65,7 +65,7 @@
                             </button>
                             <div class="accordion mt-3" id="accordionExample"></div>
                             <div class="d-flex justify-content-end">
-                                <button type="submit" id="btnSubmitBasicSurvey" class="btn btn-primary col-1 mt-4">Tiếp theo</button>
+                                <button type="submit" id="btnSaveQuestions" class="btn btn-primary col-1 mt-4">Submit</button>
                                 <h1 id="demo"></h1>
                             </div>
                         </div>
