--- a/SurveyEducation/Views/Account/Login.cshtml
+++ b/SurveyEducation/Views/Account/Login.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@model SurveyEducation.ViewModels.AccountViewModel
+<!DOCTYPE html>
 <html lang="en"
       class="light-style customizer-hide"
       dir="ltr"
@@ -103,44 +104,27 @@
                         <h4 class="mb-2">Welcome to Sneat! 👋</h4>
                         <p class="mb-4">Please sign-in to your account and start the adventure</p>
 
-                        <form id="formAuthentication" class="mb-3" action="index.html" method="POST">
-                            <div class="mb-3">
-                                <label for="email" class="form-label">Email or Username</label>
-                                <input type="text"
-                                       class="form-control"
-                                       id="email"
-                                       name="email-username"
-                                       placeholder="Enter your email or username"
-                                       autofocus />
-                            </div>
-                            <div class="mb-3 form-password-toggle">
-                                <div class="d-flex justify-content-between">
-                                    <label class="form-label" for="password">Password</label>
-                                    <a href="auth-forgot-password-basic.html">
-                                        <small>Forgot Password?</small>
-                                    </a>
-                                </div>
-                                <div class="input-group input-group-merge">
-                                    <input type="password"
-                                           id="password"
-                                           class="form-control"
-                                           name="password"
-                                           placeholder="&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;&#xb7;"
-                                           aria-describedby="password" />
-                                    <span class="input-group-text cursor-pointer"><i class="bx bx-hide"></i></span>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" id="remember-me" />
-                                    <label class="form-check-label" for="remember-me"> Remember Me </label>
-                                </div>
-                            </div>
-                            <div class="mb-3">
-                                <button class="btn btn-primary d-grid w-100" type="submit">Sign in</button>
-                            </div>
-                        </form>
-
+                        @using (Html.BeginForm("Login", "Account"))
+                        {
+                            @Html.AntiForgeryToken()
+                            <div class="signin-box">
+                                <h2 class="slim-logo"><a href="index.html">Admin<span>.</span></a></h2>
+                                <h2 class="signin-title-primary">Welcome back!</h2>
+                                <h3 class="signin-title-secondary">Sign in to continue.</h3>
+                                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                                <div class="form-group">
+                                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
+                                    @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
+                                </div><!-- form-group -->
+                                <div class="form-group mg-b-50">
+                                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                                    @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
+                                    @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
+                                </div><!-- form-group -->
+                                <button type="submit" class="btn btn-primary btn-block btn-signin">Sign In</button>
+                            </div><!-- signin-box -->
+                        }
                         <p class="text-center">
                             <span>New on our platform?</span>
                             <a href="Register">
