--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -42,11 +42,11 @@
                                     </div>
                                     <div class="row m-2 basic-survey">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian bắt đầu</label></div>
-                                        <div class="col-4"><input type="date" name="start-time" class="form-control" id="start-time" placeholder="Start Time" /></div>
+                                        <div class="col-4"><input type="datetime-local" name="start-time" class="form-control" id="start-time" placeholder="Start Time" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Thời gian kết thúc</label></div>
-                                        <div class="col-4"><input type="date" name="end-time" class="form-control" id="end-time" placeholder="End Time" /></div>
+                                        <div class="col-4"><input type="datetime-local" name="end-time" class="form-control" id="end-time" placeholder="End Time" /></div>
                                     </div>
                                     <div class="row m-2 basic-survey" ">
                                         <div class="col-2"><label class="form-label" for="basic-default-company">Mô tả</label></div>
@@ -54,7 +54,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end">
-                                    <button type="submit" id="btnSubmitBasicSurvey" class="btn btn-primary col-1 mt-4">Tiếp theo</button>
+                                    <button type="submit" id="btnNextStep" class="btn btn-primary col-1 mt-4">Tiếp theo</button>
                                     <h1 id="demo"></h1>
                                 </div>
                             </form>
@@ -65,7 +65,7 @@
                             </button>
                             <div class="accordion mt-3" id="accordionExample"></div>
                             <div class="d-flex justify-content-end">
-                                <button type="submit" id="btnSaveQuestions" class="btn btn-primary col-1 mt-4">Submit</button>
+                                <button type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">Submit</button>
                                 <h1 id="demo"></h1>
                             </div>
                         </div>
