--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -139,7 +139,7 @@
                 <div data-i18n="Account Settings">Báo cáo thống kê</div>
             </a>
         </li>
-        <li class="menu-item">
+        @*<li class="menu-item">
             <a href="/Account/Login" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
                 <div data-i18n="Account Settings">Đăng nhập</div>
@@ -150,6 +150,6 @@
                 <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
                 <div data-i18n="Account Settings">Đăng ký</div>
             </a>
-        </li>
+        </li>*@
     </ul>
 </aside>
