--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -65,8 +65,9 @@
                             </button>
                             <div class="accordion mt-3" id="accordionExample"></div>
                             <div class="d-flex justify-content-end">
-                                <button type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">Submit</button>
-                                <h1 id="demo"></h1>
+                                @*<button type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">
+                                    Submit*@@*/button>*@
+                                <a href="/Admin/Survey/ShowSurvey" type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">Submit</a>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
@@ -131,13 +132,6 @@
                         data-bs-dismiss="modal"
                         aria-label="Close"></button>
             </div>
-            @*<div class="modal-body">
-                    <div class="row">
-                        <div class="col mb-3">
-                            <label for="nameLarge" class="form-label">Chắc chắn xóa câu hỏi?</label>
-                        </div>
-                    </div>
-                </div>*@
             <div class="modal-footer">
                 <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">
                     Bỏ qua
@@ -150,6 +144,10 @@
 <!-- add question Modal -->
 <div class="modal fade" id="add-answer-modal" tabindex="-1" aria-hidden="true">
     <input type="hidden" id="current-question-index" name="current-question-index" value="0" />
+    <input type="hidden" id="answer-modal-action" name="answer-modal-action" value="1" />
+
+    @*<input type="hidden" id="question-modal-action" name="question-modal-action" value="1" />
+    <input type="hidden" id="current-object-index" name="current-object-index" value="0" />*@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
