--- a/SurveyEducation/Views/Account/Login.cshtml
+++ b/SurveyEducation/Views/Account/Login.cshtml
@@ -107,22 +107,23 @@
                         @using (Html.BeginForm("Login", "Account"))
                         {
                             @Html.AntiForgeryToken()
-                            <div class="signin-box">
+                            <div class="signin-box mb-3">
                                 <h2 class="slim-logo"><a href="index.html">Admin<span>.</span></a></h2>
                                 <h2 class="signin-title-primary">Welcome back!</h2>
                                 <h3 class="signin-title-secondary">Sign in to continue.</h3>
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                <div class="form-group">
-                                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="mb-3">
+                                    @Html.LabelFor(model => model.UserName, htmlAttributes: new { @class = "control-label" })
                                     @Html.EditorFor(model => model.UserName, new { htmlAttributes = new { @class = "form-control" } })
                                     @Html.ValidationMessageFor(model => model.UserName, "", new { @class = "text-danger" })
                                 </div><!-- form-group -->
-                                <div class="form-group mg-b-50">
-                                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label col-md-2" })
+                                <div class="mb-3 form-password-toggle">
+                                    @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "control-label" })
                                     @Html.PasswordFor(model => model.Password, new { @class = "form-control" })
                                     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
                                 </div><!-- form-group -->
-                                <button type="submit" class="btn btn-primary btn-block btn-signin">Sign In</button>
+                                <div class="col-md-4"></div>
+                                <button type="submit" class="btn btn-primary btn-block btn-signin col-md-4 text-center">Sign In</button><br />
                             </div><!-- signin-box -->
                         }
                         <p class="text-center">
