--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -16,6 +16,7 @@
             </li>
             <li class="nav-item" role="presentation">
                 <button class="nav-link" id="pills-profile-tab" data-bs-toggle="pill" data-bs-target="#pills-profile" type="button" role="tab" aria-controls="pills-profile" aria-selected="false">Tạo mới google survey</button>
+
             </li>
         </ul>
         <div class="tab-content" id="pills-tabContent">
@@ -65,9 +66,7 @@
                             </button>
                             <div class="accordion mt-3" id="accordionExample"></div>
                             <div class="d-flex justify-content-end">
-                                @*<button type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">
-                                    Submit*@@*/button>*@
-                                <a href="/Admin/Survey/ShowSurvey" type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">Submit</a>
+                                <button type="submit" id="btnSubmitForm" class="btn btn-primary col-1 mt-4 submit-survey">Submit</button>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="contact" role="tabpanel" aria-labelledby="contact-tab">
