--- a/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/AddSurvey.cshtml
@@ -76,11 +76,10 @@
                 </div>
             </div>
             <div class="tab-pane fade" id="pills-profile" role="tabpanel" aria-labelledby="pills-profile-tab">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSfYMUf-GqATlWkI-3gtGryGryg8fJHH_aOTXff_xkt-SBrF-g/viewform?usp=sf_link"></a>
+                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdwxvE2eXbJBKhXFcmWX9qx8UGJ2Rk2Rbmubay1br0jyJ15tA/viewform?embedded=true" width="100%" height="1535" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
             </div>
         </div>
     </div>
-
 </div>
 <div class="modal fade" id="question-modal" tabindex="-1" aria-hidden="true">
     <input type="hidden" id="question-modal-action" name="question-modal-action" value="1" />
@@ -146,7 +145,7 @@
     <input type="hidden" id="answer-modal-action" name="answer-modal-action" value="1" />
 
     @*<input type="hidden" id="question-modal-action" name="question-modal-action" value="1" />
-    <input type="hidden" id="current-object-index" name="current-object-index" value="0" />*@
+        <input type="hidden" id="current-object-index" name="current-object-index" value="0" />*@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
