--- a/SurveyEducation/Views/Account/Register.cshtml
+++ b/SurveyEducation/Views/Account/Register.cshtml
@@ -102,7 +102,7 @@
                         <!-- /Logo -->
                         <h4 class="mb-2">Adventure starts here 🚀</h4>
                         <p class="mb-4">Make your app management easy and fun!</p>
-                        @using (Html.BeginForm("AddAccount", "Account"))
+                        @using (Html.BeginForm("AddAccount", "Account", FormMethod.Post))
                         {
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                             @Html.AntiForgeryToken()
