--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -34,21 +34,9 @@
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">About</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown03">
-                            <li><a class="dropdown-item" href="about.html">Our company</a></li>
-                            <li><a class="dropdown-item" href="pricing.html">Pricing</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item"><a class="nav-link" href="service.html">Services</a></li>
-                    <li class="nav-item"><a class="nav-link" href="project.html">Portfolio</a></li>
-                    <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
                         <ul class="dropdown-menu" aria-labelledby="dropdown05">
-                            <li><a class="dropdown-item" href="Survey">Blog Grid</a></li>
-                            <li><a class="dropdown-item" href="blog-sidebar.html">Blog with Sidebar</a></li>
-
-                            <li><a class="dropdown-item" href="blog-single.html">Blog Single</a></li>
+                            <li><a class="dropdown-item" href="/Home/Survey">Blog Grid</a></li>
                         </ul>
                     </li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
