--- a/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Shared/_Menu.cshtml
@@ -134,22 +134,10 @@
             </ul>
         </li>
         <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link">
+            <a href="/Admin/Survey/StatisticSurveys" class="menu-link">
                 <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
                 <div data-i18n="Account Settings">Báo cáo thống kê</div>
             </a>
         </li>
-        @*<li class="menu-item">
-            <a href="/Account/Login" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
-                <div data-i18n="Account Settings">Đăng nhập</div>
-            </a>
-        </li>
-        <li class="menu-item">
-            <a href="/Account/Register" class="menu-link">
-                <i class="menu-icon tf-icons bx bx-wallet-alt"></i>
-                <div data-i18n="Account Settings">Đăng ký</div>
-            </a>
-        </li>*@
     </ul>
 </aside>
