--- a/SurveyEducation/Views/Home/Details.cshtml
+++ b/SurveyEducation/Views/Home/Details.cshtml
@@ -1,7 +1,8 @@
 ﻿@model  SurveyEducation.Models.Survey
-@*@{
-        List<string> stringList = ;
-    }*@
+@{
+    var checkUser = Session["UserName"] != null;
+
+}
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Survey Information</span></h4>
     <div class="row">
@@ -46,7 +47,16 @@
                     </li>
                 </ul>
                 <ul data-box="questions-box"></ul>
-                <button type="button" id="btnSubmitAnswer" class="btn btn-primary">Submit</button>
+                <div>
+
+                    @if (checkUser)
+                    {
+                        <span class="align-middle">
+                            <button type="button" id="btnSubmitAnswer" class="btn btn-primary">Submit</button>
+                        </span>
+                    }
+                </div>
+
             </div>
         </div>
     </div>
