--- a/SurveyEducation/Views/Shared/_Header.cshtml
+++ b/SurveyEducation/Views/Shared/_Header.cshtml
@@ -31,19 +31,16 @@
             <div class="collapse navbar-collapse text-center" id="navbarsExample09">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="/Home/Index">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="dropdown05" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Blog</a>
-                        <ul class="dropdown-menu" aria-labelledby="dropdown05">
-                            <li><a class="dropdown-item" href="/Home/Survey">Blog Grid</a></li>
-                        </ul>
+                        <a class="nav-link" href="/Home/Survey" aria-expanded="false">Surveys</a>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/Home/Contact">Contact</a></li>
                 </ul>
 
                 <form class="form-lg-inline my-2 my-md-0 ml-lg-4 text-center">
-                    <a href="contact.html" class="btn btn-solid-border btn-round-full">Get a Quote</a>
+                    <a href="/Account/Logout" class="btn btn-solid-border btn-round-full">Log out</a>
                 </form>
             </div>
         </div>
