handle statistic survey

--- a/SurveyEducation/Areas/Admin/Views/Survey/StatisticSurveys.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/StatisticSurveys.cshtml
@@ -15,8 +15,7 @@
                         <th>Actions</th>
                     </tr>
                 </thead>
-                <tbody class="table-border-bottom-0" data-box="statistic-box">
-                </tbody>
+                <tbody class="table-border-bottom-0" id="tb-statistic"></tbody>
             </table>
         </div>
     </div>
