--- a/SurveyEducation/Areas/Admin/Views/Survey/DetailStatisticSurvey.cshtml
+++ b/SurveyEducation/Areas/Admin/Views/Survey/DetailStatisticSurvey.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<SurveyEducation.Models.Account>
+﻿@using SurveyEducation.Models
+@model List<Account>
 
 <div class="container-xxl flex-grow-1 container-p-y">
     <h4 class="fw-bold py-3 mb-4"><span class="text-muted fw-light">Details Statistic Survey</span></h4>
@@ -19,15 +20,15 @@
                     @foreach (var item in Model)
                     {
                     <tr>
-                        <td>@Html.DisplayFor(modelItem => item.Id)</td>
-                        <td>@Html.DisplayFor(modelItem => item.UserName)</td>
+                        <td>@item.Id</td>
+                        <td>@item.UserName</td>
                         <td>
                             <div class="dropdown">
                                 <button type="button" class="btn p-0 dropdown-toggle hide-arrow" data-bs-toggle="dropdown">
                                     <i class="bx bx-dots-vertical-rounded"></i>
                                 </button>
                                 <div class="dropdown-menu">
-                                    <a class="dropdown-item btnShowDetail" id="@item.Id"><i class="fa-solid fa-eye"></i>&nbsp;Detail</a>
+                                    @Html.ActionLink("Detail", "ShowResultUser", "Survey", new { id = Url.RequestContext.RouteData.Values["id"], userId = @item.Id}, null)
                                 </div>
                             </div>
                         </td>
